# cw-stargate-query

./: LICENSE  Makefile  README.md
contract/: Cargo.toml  rustfmt.toml
contract/src/: auth.rs  contract.rs  lib.rs  msg.rs  query.rs
contracts/cw-stargate-query/: Cargo.toml  build.rs
contracts/cw-stargate-query/src/: contract.rs  msg.rs
proto/cosmos/auth/v1beta1/: auth.proto  query.proto
scripts/: 2_deploy.ts  4_query_example.ts  keystore.ts  package-lock.json  package.json  proto_rust_gen.sh
scripts/keys/: dev.json  localterra1.json
scripts/src/: cli.ts  deploy.ts  query.ts  tx.ts
