[package]
name = "cw-stargate-query"
version = "0.1.0"
authors = ["larry <gm@larry.engineer>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/larry0x/cw-stargate-query"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[profile.release]
rpath = false
lto = true
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "0.16", features = ["stargate"] }
protobuf = { version = "2", features = ["with-bytes"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
