[package]
name = "cw-stargate-query"
version = "0.1.0"
authors = ["larry <gm@larry.engineer>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/larry0x/cw-stargate-query"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
bytes = "1.1"
cosmwasm-std = { version = "0.16", features = ["stargate"] }
prost = "0.10"
prost-types = "0.10" # necessary
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[build-dependencies]
prost-build = "0.10"
